--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>java-project</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>java-projectwebhook</name>
+  <name>java-projectwebhookkkkkkkkkkkkk</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
